<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapps"
    android:fillViewport="true"
    tools:context=".home.Sholat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/left_arrow"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sholat"
                android:textColor="@android:color/white"
                android:textSize="28sp" />

            <!--<ImageView-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginEnd="12dp"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:src="@drawable/home" />-->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp">

            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="12dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sholat" />

            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/linearTataCaraSholat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/right_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tata_cara_sholat"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/linearDalilPerintahSholat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/right_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/dalil_perintah_sholat"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/linearWaktuDilarangSholat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/right_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/waktu_dilarang_sholat"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/linearHukumSholatFardu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/right_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hukum_sholat_fardhu"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/linearSyaratWajibSholat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/right_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/syarat_wajib_sholat"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/linearSyaratSahSholat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/right_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/syarat_sah_sholat"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/linearRukunSholat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/right_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rukun_sholat"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>